# moss-website

./: .gitignore  CNAME  IMPLEMENTATION_PLAN.md  README.md  TESTING.md  index.html  integration.test.js  main.js  main.test.js  package-lock.json  package.json  preview.html  preview.js  roadmap.html  tsconfig.json  vite.config.js  vitest.config.js
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/: README.md  financial-plan.md  funding-strategy.md  growth-strategy.md  index.html  technical-architecture.md
docs/Posts/: index.html  why-i-want-to-build-moss.html
docs/developer/: README.md  content-detection-logic.md  dev-roadmap.md  developer-guide.md  implementation-plan.md  technical-architecture.md  testing-guide.md
docs/developer/journal/: 2025-08-22.md  2025-08-23.md  (+2 more)
docs/public/: README.md  architecture.md  philosophy.md  roadmap.md  why moss.md  why.md
docs/strategic/: README.md  financial-plan.md  funding-strategy.md  growth-strategy.md  nyc-campaigns.md
site/: roadmap.html  why.html
src/: app.ts  bindings.ts  index.html  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  workflow_template.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.png.backup  icon.ai  icon.icns
src-tauri/src/: commands.rs  compile.rs  main.rs  preview.rs  services.rs  system.rs  tray_tests.rs  types.rs  window_manager.rs
src-tauri/src/assets/: default.css
src-tauri/src/assets/js/: theme.js
src-tauri/src/assets/templates/: article.html  index.html  topic.html
src-tauri/src/commands/: compile.rs  mod.rs  preview.rs  publish.rs
src-tauri/src/compile/: analysis.rs  generator.rs  navigation.rs  server.rs
src-tauri/src/preview/: commands.rs  git.rs  github.rs  github_api.rs  ipc.rs  mod.rs  state.rs  url_builder.rs  window.rs
src-tauri/src/services/: deep_link.rs  handler.rs  path_extractor.rs  registration.rs
src/backend/: tauri-integration.test.ts  tauri-integration.ts
src/panel/: action-handlers.ts  command-registry.ts  keyboard-shortcuts.ts  panel-manager.ts
src/preview/: preview-manager.test.ts  preview-manager.ts  progress-templates.ts
src/types/: commands.ts  index.ts  progress.ts
test-content/: README.md
test-content/simple-blog/: about.md  contact.md  index.md
(+43 files in other folders)
