[package]
name = "moss"
version = "0.1.0"
description = "Right-click to publish. Keep your content portable."
authors = ["Moss Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "=2.7.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.3"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-deep-link = "2.4.1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
