[package]
name = "moss"
version = "0.1.0"
description = "Right-click to publish. Keep your content portable."
authors = ["moss Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon", "image-png", "test"] }
tauri-plugin-fs = "2.3"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-deep-link = "2.4.1"
tauri-plugin-single-instance = { version = "2.0", features = ["deep-link"] }
tauri-plugin-dialog = "2.3"
walkdir = "2.4"
toml = "0.8"
pulldown-cmark = "0.11"
gray_matter = "0.2"
serde_yaml = "0.9"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
url = "2.4"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
accessibility-sys = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
